weaviate/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: weaviate
  labels: 
    istio-injection: enabled
