weaviate/manifests/vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: weaviate
  namespace: weaviate
spec:
  gateways:
  - istio-system/tenant
  hosts:
  - "weaviate.###ZARF_VAR_DOMAIN###"
  http:
  - route:
    - destination:
        host: weaviate
        port:
          number: 80
